--- a/PISTONS/src/app/app.html
+++ b/PISTONS/src/app/app.html
@@ -1,6 +1,24 @@
-<app-header></app-header>
+<div class="racing-background">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
 
-<div class="container mt-4">
-  <router-outlet></router-outlet>
-  
+<div class="d-flex flex-column min-vh-100 position-relative">
+
+  <app-header></app-header>
+
+  <main class="flex-fill">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+
 </div>
